# jenkins-http-mcp-server

./: .gitignore  .python-version  README.md  pyproject.toml
.agents/skills/jenkins-mcp-maintainer/: SKILL.md
.agents/skills/jenkins-mcp-operator/: SKILL.md
.agents/skills/jenkins-source-researcher/: SKILL.md
.gemini/skills/: jenkins-mcp-maintainer  jenkins-mcp-operator  jenkins-source-researcher
.github/workflows/: ci.yml
docs/: architecture-decision.md  codex-setup.md  existing-research.md  gemini-setup.md  security.md  source-skills-check.md  source-truth.md  tool-evidence.md
src/jenkins_mcp_server/: __init__.py  __main__.py  auth.py  client.py  config.py  crumbs.py  errors.py  logging.py  resources.py  tools.py  workspace_bundle.py
tests/: test_auth.py  test_client.py  test_config.py  test_integration.py  test_tools.py  test_workspace_bundle.py
